Code changes for scanstockiq application